# stage_gedlibpy

./: Notes  README.md  edit_graph.py  ged_median.py  misc.py  test.py
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp/data/: generate_collections.py
cpp/data/collections/: Letter_I.xml
cpp/src/: edit_graph.cpp  edit_graph.h
cpp/tutorial/: Makefile  functions.cpp  functions.h  reference.txt  test.cpp
data/: 5.gxl  5_after.gxl  5_after_2.gxl  AP1_0000.gxl  AP1_0000_after_2.gxl  molecule_1.gxl  molecule_1_after_2.gxl
data/test_blobs/blobs/: A_and_L_blobs.xml  graph0.gxl  graph1.gxl  graph2.gxl  graph3.gxl  result_blobs.xml
data/test_blobs/orig/: one_graph.xml  test_blobs.xml
